<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisqueraActivity">

    <TextView
            android:text="@string/tituloDisquera"
            android:layout_width="207dp"
            android:layout_height="36dp"
            android:id="@+id/textView" android:textSize="18sp"
            android:textAlignment="center" android:textStyle="bold" android:fontFamily="casual"
            android:layout_marginStart="2dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.503"/>
    <EditText
            android:layout_width="238dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Text_nombreDisquera"
            android:hint="@string/nombreDisquera"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.53"
            android:fontFamily="casual" android:textAlignment="center"/>
    <EditText
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Text_direccionDisquera" android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/Text_nombreDisquera"
            app:layout_constraintHorizontal_bias="0.507" android:hint="@string/direccionDisquera"
            android:fontFamily="casual" android:textAlignment="center"/>
    <EditText
            android:layout_width="231dp"
            android:layout_height="45dp"
            android:ems="10"
            android:id="@+id/Text_TelefonoDisquera" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/Text_direccionDisquera"
            android:inputType="number" android:fontFamily="casual" android:hint="@string/telefonoDisquera"
            android:textAlignment="center"/>
    <Button
            android:text="@string/guardarBoton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_guardarDisqera" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Text_TelefonoDisquera"
            style="@android:style/Widget.Button.Inset" android:fontFamily="casual"
            app:layout_constraintHorizontal_bias="0.539"/>


    <ScrollView
            android:layout_width="384dp"
            android:layout_height="79dp"
            android:id="@+id/scrollView3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_guardarDisqera"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.873"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginEnd="8dp">

        <TextView
                android:id="@+id/result_disquera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </ScrollView>
    <Button
            android:text="@string/buscarBoton"
            android:layout_width="93dp"
            android:layout_height="49dp"
            android:id="@+id/button_buscarDisquera" android:fontFamily="casual"
            android:layout_marginTop="9dp" app:layout_constraintTop_toBottomOf="@+id/button_guardarDisqera"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/scrollView3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>