<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ArtistaActivity">


    <TextView
            android:text="@string/tituloArtist"
            android:layout_width="224dp"
            android:layout_height="42dp"
            android:id="@+id/textView2" android:textAlignment="center"
            android:textSize="18sp" android:textStyle="bold" android:fontFamily="casual"
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="266dp"
            android:layout_height="43dp"
            android:ems="10"
            android:id="@+id/Text_nombreArtista"
            android:inputType="textPersonName" android:hint="@string/nombreArtista"
            android:fontFamily="casual" android:textAlignment="center"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="266dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Text_nacionalidad"
            android:hint="@string/nacionalidadArtista"
            android:fontFamily="casual" android:textAlignment="center"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/Text_nombreArtista"/>
    <Button
            android:text="@string/guardarBoton"
            android:layout_width="209dp"
            android:layout_height="43dp"
            android:id="@+id/button_guardarArtista"
            style="@android:style/Widget.Button.Inset"
            android:fontFamily="casual"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/Text_nacionalidad" app:layout_constraintHorizontal_bias="0.503"/>
    <Button
            android:text="@string/buscarBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_buscaArtista"
            android:fontFamily="casual"
            app:layout_constraintEnd_toStartOf="@+id/button_ActualizarArtista"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button_guardarArtista"
            app:layout_constraintHorizontal_bias="0.416"/>
    <Button
            android:text="@string/actualizarBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_ActualizarArtista"
            android:fontFamily="casual"
            app:layout_constraintEnd_toStartOf="@+id/button_eliminarArtista"
            android:layout_marginEnd="32dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button_guardarArtista"/>
    <Button
            android:text="@string/borrarBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_eliminarArtista"
            android:fontFamily="casual"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button_guardarArtista"/>
    <ScrollView
            android:layout_width="384dp"
            android:layout_height="79dp"
            android:id="@+id/scrollView3"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button_ActualizarArtista"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.478"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">

        <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </ScrollView>
    <Spinner
            android:layout_width="160dp"
            android:layout_height="42dp"
            android:id="@+id/spinner_DisqueraArtista"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/Text_DisqueraArtista"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Text_nacionalidad" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_guardarArtista"/>
    <EditText
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:text=" "
            android:ems="10"
            android:id="@+id/Text_DisqueraArtista"
            android:fontFamily="casual"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Text_nacionalidad" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button_guardarArtista" android:visibility="visible"
            android:editable="true"/>



</android.support.constraint.ConstraintLayout>